--- a/src/Web/LearningPlusWebApp/wwwroot/scss/_styles.scss
+++ b/src/Web/LearningPlusWebApp/wwwroot/scss/_styles.scss
@@ -11,7 +11,7 @@ body {
 }
 
 a {
-    color: var(--color-theme, #50d8af);
+    color: var(--color-theme-bold, #0c2e8a);
     transition: 0.5s;
 
     &:hover,
