--- a/src/Web/LearningPlusWebApp/wwwroot/css/site.css
+++ b/src/Web/LearningPlusWebApp/wwwroot/css/site.css
@@ -2,21 +2,7 @@
 :root {
   --color-theme: #50d8af;
   --color-theme-focus: #51d8af;
-  --color-theme-bold: #0c2e8a;
-  /*--font-size-body: 14px; 
-    --font-size-body-larger: 16px;
-    --font-size-body-big: 18px;
-    --font-size-body-huge: 20px;
-
-    --layout-main-width: 60em;
-
-    --color-body-text: #000;
-    --color-body-bgrd: #FFF;
-    --color-link-default: #A00;
-
-    --color-border-default: #999;
-
-    --spacing-layout-elements: 2em;*/ }
+  --color-theme-bold: #0c2e8a; }
 
 *, *:before, *:after {
   margin: 0;
@@ -99,24 +85,6 @@ blockquote .author:before {
   content: '\2014';
   padding-right: 0.5em; }
 
-/*.site {
-    max-width: var(--layout-main-width);
-    margin: 0 auto;
-    padding: 2em;
-}
-
-
-@media ( min-width: 1024px ) {
-    .site-header {
-        display: flex;
-        align-items: center;
-    }
-
-    .site-header nav {
-        margin-left: auto;
-    }
-    
-}*/
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -128,7 +96,7 @@ body {
   margin: 0 auto; }
 
 a {
-  color: var(--color-theme, #50d8af);
+  color: var(--color-theme-bold, #0c2e8a);
   transition: 0.5s; }
   a:hover, a:active, a:focus {
     color: var(--color-theme-focus, #51d8af);
@@ -793,16 +761,30 @@ h6 {
   margin: 1em auto; }
   .login .page-title {
     text-align: center;
-    border-bottom: 2px solid #000000; }
+    border-bottom: 2px solid #000000;
+    margin-bottom: 0.8em; }
   .login form {
     display: flex;
     flex-wrap: wrap;
     justify-content: center; }
+    .login form legend {
+      border: 2px solid var(--color-theme-focus, #51d8af);
+      padding: 0.5rem 1.5rem;
+      padding-right: 2rem;
+      border-radius: 0.3rem;
+      margin-left: -1.2rem;
+      color: var(--color-theme-bold, #0c2e8a); }
+    .login form fieldset {
+      padding: 0.5rem;
+      align-items: center;
+      border: 2px solid var(--color-theme-focus, #51d8af);
+      border-radius: 0.5em; }
     .login form .field {
       display: flex;
       flex-wrap: wrap;
       flex: 0 0 100%;
-      justify-content: center; }
+      justify-content: center;
+      margin-bottom: 1em; }
       .login form .field .field-name {
         flex: 0 0 100%;
         text-align: center; }
@@ -835,28 +817,37 @@ h6 {
     .login form .rememberme {
       flex: 0 0 89%;
       margin-top: 1em;
-      border-top: 1px solid #000000;
-      border-bottom: 1px solid #000000;
-      display: flex;
       justify-content: center;
       align-content: center;
-      padding: 1em 0; }
-    .login form .rememberme input {
-      margin-top: 0.4em;
-      margin-right: 0.4em; }
-    .login form button {
-      flex: 0 0 30%;
-      margin: 1em; }
-    .login form::after {
-      padding-left: 89%;
-      content: "";
-      border-bottom: 1px solid #000000; }
+      color: var(--color-theme-bold, #0c2e8a);
+      text-align: center; }
+      .login form .rememberme input {
+        margin-top: 0.4em;
+        margin-right: 0.4em; }
+    .login form button.btn-facebook {
+      flex: 0 0 100%;
+      margin: 1em;
+      padding: 0.2em;
+      cursor: pointer; }
+    .login form button.logo-btn {
+      margin: 0.5em auto;
+      color: var(--color-theme-bold, #0c2e8a);
+      text-transform: uppercase;
+      background: #ffffff;
+      padding: 0.8em;
+      border: 4px solid #20bf6b;
+      border-radius: 6px;
+      display: inline-block;
+      transition: all 0.3s ease 0s;
+      display: block;
+      width: 60%; }
+      .login form button.logo-btn:hover {
+        color: var(--color-theme, #50d8af);
+        border-radius: 50px;
+        border-color: var(--color-theme-bold, #0c2e8a);
+        transition: all 0.3s ease 0s; }
   .login .text-center {
     text-align: center; }
-  .login div + form::before {
-    padding-left: 89%;
-    content: "";
-    border-bottom: 1px solid #000000; }
 
 .btn-facebook {
   color: #fff;
@@ -874,6 +865,16 @@ h6 {
     color: #fff;
     background-color: #2d4373;
     border-color: rgba(0, 0, 0, 0.2); }
+
+/*---------------------------
+    Media queries
+---------------------------*/
+@media (max-width: 700px) {
+  .login form .field label.icon {
+    display: none; }
+  .login form .field > input {
+    border: 2px solid #0094ff;
+    border-radius: 0.3em; } }
 
 .page-gallery {
   /*background: url('https://images.unsplash.com/photo-1516979187457-637abb4f9353?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60') no-repeat;
