--- a/src/Web/LearningPlusWebApp/wwwroot/scss/_login.scss
+++ b/src/Web/LearningPlusWebApp/wwwroot/scss/_login.scss
@@ -5,6 +5,7 @@
     .page-title {
         text-align: center;
         border-bottom: 2px solid #000000;
+        margin-bottom: 0.8em;
     }
 
     form {
@@ -12,11 +13,28 @@
         flex-wrap: wrap;
         justify-content: center;
 
+        legend {
+            border: 2px solid var(--color-theme-focus, #51d8af);
+            padding: 0.5rem 1.5rem;
+            padding-right: 2rem;
+            border-radius: 0.3rem;
+            margin-left: -1.2rem;
+            color: var(--color-theme-bold, #0c2e8a);
+        }
+
+        fieldset {
+            padding: 0.5rem;
+            align-items: center;
+            border: 2px solid var(--color-theme-focus, #51d8af);
+            border-radius: 0.5em;
+        }
+
         .field {
             display: flex;
             flex-wrap: wrap;
             flex: 0 0 100%;
             justify-content: center;
+            margin-bottom: 1em;
 
             .field-name {
                 flex: 0 0 100%;
@@ -59,39 +77,48 @@
         .rememberme {
             flex: 0 0 89%;
             margin-top: 1em;
-            border-top: 1px solid #000000;
-            border-bottom: 1px solid #000000;
-            display: flex;
             justify-content: center;
             align-content: center;
-            padding: 1em 0;
+            color: var(--color-theme-bold, #0c2e8a);
+            text-align: center;
+
+            input {
+                margin-top: 0.4em;
+                margin-right: 0.4em;
+            }
         }
 
-        .rememberme input {
-            margin-top: 0.4em;
-            margin-right: 0.4em;
-        }
-
-        button {
-            flex: 0 0 30%;
+        button.btn-facebook {
+            flex: 0 0 100%;
             margin: 1em;
+            padding: 0.2em;
+            cursor: pointer;
         }
 
-        &::after {
-            padding-left: 89%;
-            content: "";
-            border-bottom: 1px solid #000000;
+        button.logo-btn {
+            margin: 0.5em auto;
+            color: var(--color-theme-bold, #0c2e8a);
+            text-transform: uppercase;
+            background: #ffffff;
+            padding: 0.8em;
+            border: 4px solid #20bf6b;
+            border-radius: 6px;
+            display: inline-block;
+            transition: all 0.3s ease 0s;
+            display: block;
+            width: 60%;
+
+            &:hover {
+                color: var(--color-theme, #50d8af);
+                border-radius: 50px;
+                border-color: var(--color-theme-bold, #0c2e8a);
+                transition: all 0.3s ease 0s;
+            }
         }
     }
 
     .text-center {
         text-align: center;
-    }
-
-    div + form::before {
-        padding-left: 89%;
-        content: "";
-        border-bottom: 1px solid #000000;
     }
 }
 
@@ -118,5 +145,22 @@
         color: #fff;
         background-color: #2d4373;
         border-color: rgba(0,0,0,0.2);
+    }
+}
+
+/*---------------------------
+    Media queries
+---------------------------*/
+
+@include bp(login) {
+    .login form .field {
+        label.icon {
+            display: none;
+        }
+
+        > input {
+            border: 2px solid #0094ff;
+            border-radius: 0.3em;
+        }
     }
 }
