--- a/src/Web/LearningPlusWebApp/wwwroot/scss/_mixins.scss
+++ b/src/Web/LearningPlusWebApp/wwwroot/scss/_mixins.scss
@@ -12,6 +12,12 @@
         }
     }
 
+    @else if $point == login {
+        @media (max-width: 700px) {
+            @content;
+        }
+    }
+
     @else if $point == laptop {
         @media (min-width: 769px) {
             @content;
