--- a/src/Web/LearningPlusWebApp/wwwroot/css/site.css
+++ b/src/Web/LearningPlusWebApp/wwwroot/css/site.css
@@ -180,6 +180,10 @@ h6 {
   transition: all 0.5s;
   z-index: 997;
   background: #fff; }
+  .site-header .onit {
+    color: var(--color-theme, #50d8af);
+    border: 2px solid var(--color-theme-bold, #0c2e8a);
+    border-radius: 1em; }
   .site-header .wrapper {
     display: flex;
     justify-content: space-around;
