--- a/src/Web/LearningPlusWebApp/wwwroot/css/site.css
+++ b/src/Web/LearningPlusWebApp/wwwroot/css/site.css
@@ -767,6 +767,11 @@ h6 {
     text-align: center;
     border-bottom: 2px solid #000000;
     margin-bottom: 0.8em; }
+  .login .error {
+    color: red;
+    font-style: italic;
+    text-align: center;
+    display: block; }
   .login form {
     display: flex;
     flex-wrap: wrap;
