--- a/src/Web/LearningPlusWebApp/wwwroot/scss/_login.scss
+++ b/src/Web/LearningPlusWebApp/wwwroot/scss/_login.scss
@@ -8,6 +8,13 @@
         margin-bottom: 0.8em;
     }
 
+    .error {
+        color: red;
+        font-style: italic;
+        text-align: center;
+        display: block;
+    }
+
     form {
         display: flex;
         flex-wrap: wrap;
