Introduce grid for profession page.

--- a/src/Web/LearningPlusWebApp/Views/Home/EducationalPortal/Profesion.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Home/EducationalPortal/Profesion.cshtml
@@ -1,35 +1,84 @@
 ﻿
 @{
     ViewData["Title"] = "Избор на професия";
+    Layout="_Layout-CSS";
 }
 
-<div class="entry-content w-75 ml-5">
-    <h1>Избор на професия</h1>
-    <h2 style="text-decoration: underline;" align="center">Матрица за избор на професия</h2>
-    <h3>Кой обект от дейността те привлича?</h3>
-    <ol class="step-right">
-        <li>Човек (деца и възрастни, ученици и студенти, клиенти и пациенти, купувачи и пасажери, зрители, читатели, сътрудници)</li>
-        <li>Информация (текстове, формули, схеми, кодове, чертежи, чужди езици)</li>
-        <li>Финанси (пари, акции, фондове, кредити)</li>
-        <li>Техника (механизми, стругове, сгради, конструкции, прибори, машини)</li>
-        <li>Изкуство (литература, музика, театър, кино, балет, живопис)</li>
-        <li>Животни (служебни, диви, домашни, селскостопански)</li>
-        <li>Растения (селскостопански, диворастящи, декоративни)</li>
-        <li>Хранителни продукти (месни, рибни, млечни, сладкарски и хлебни изделия, консерви, плодове, зеленчуци)</li>
-        <li>Изделия (метал, тъкани, кожа, дърво, камък, лекарства)</li>
-        <li>Природни ресурси (земи, гори, планини, водоеми)</li>
-    </ol>
-    <h3>Кой вид дейност те привлича?</h3>
-    <ol class="step-right">
-        <li>Управление (ръководство на някаква дейност)</li>
-        <li>Обслужване (удовлетворение на нечии потребности)</li>
-        <li>Образование (възпитание, обучение, формиране на личността)</li>
-        <li>Оздравителни процеси (избавяне на болестите и предпазване от тях)</li>
-        <li>Творчество (създаване на оригинални произведения на изкуството)</li>
-        <li>Производство (изготвяне на продукция)</li>
-        <li>Конструиране (проектиране на детайли и обекти)</li>
-        <li>Изследване (научно, изучаване на нещо и някого)</li>
-        <li>Защита (охрана от враждебни действия)</li>
-        <li>Контрол (проверка и наблюдение)</li>
-    </ol>
-</div>
+<section class="profesion-container">
+    <h2>Кой обект от дейността те привлича?</h2>
+    <p>За да успеете, трябва да бъдете по-находчив от останалите хора. Всичко, което трябва да направите, е да бъдете един ден преди тях. — Лео Силард</p>
+
+    <ul class="profis">
+        <li class="profi">
+            <h2 class="number">1</h2>
+            <h3 class="quality">Човек</h3>
+            <p>
+                Деца и възрастни, ученици и студенти, клиенти и пациенти.
+            </p>
+        </li>
+
+        <li class="profi">
+            <h2 class="number">2</h2>
+            <h3 class="quality">Информация</h3>
+            <p>
+                Текстове, формули, схеми, кодове, чертежи, чужди езици.
+            </p>
+        </li>
+        <li class="profi">
+            <h2 class="number">3</h2>
+            <h3 class="quality">Финанси</h3>
+            <p>
+                Пари, акции, фондове, кредити, облигации, имоти, инвестиции.
+            </p>
+        </li>
+        <li class="profi">
+            <h2 class="number">4</h2>
+            <h3 class="quality">Техника</h3>
+            <p>
+                Механизми, стругове, сгради, конструкции, прибори, машини.
+            </p>
+        </li>
+        <li class="profi">
+            <h2 class="number">5</h2>
+            <h3 class="quality">Изкуство</h3>
+            <p>
+                Литература, музика, театър, кино, балет, живопис.
+            </p>
+        </li>
+        <li class="profi">
+            <h2 class="number">6</h2>
+            <h3 class="quality">Животни</h3>
+            <p>
+                Служебни, диви, домашни, селскостопански.
+            </p>
+        </li>
+        <li class="profi">
+            <h2 class="number">7</h2>
+            <h3 class="quality">Растения</h3>
+            <p>
+                Селскостопански, диворастящи, декоративни.
+            </p>
+        </li>
+        <li class="profi">
+            <h2 class="number">8</h2>
+            <h3 class="quality">Хранителни</h3>
+            <p>
+                Месни, рибни, млечни, сладкарски и хлебни изделия, консерви.
+            </p>
+        </li>
+        <li class="profi">
+            <h2 class="number">9</h2>
+            <h3 class="quality">Изделия</h3>
+            <p>
+                Метал, тъкани, кожа, дърво, камък, лекарства.
+            </p>
+        </li>
+        <li class="profi">
+            <h2 class="number">10</h2>
+            <h3 class="quality">Природни ресурси</h3>
+            <p>
+                Земи, гори, планини, водоеми.
+            </p>
+        </li>
+    </ul>
+</section>
