--- a/src/Web/LearningPlusWebApp/wwwroot/scss/_styles.scss
+++ b/src/Web/LearningPlusWebApp/wwwroot/scss/_styles.scss
@@ -793,7 +793,8 @@ h6 {
             }
 
             input:checked + nav {
-                display: block
+                display: block;
+                flex: 0 0 100%;
             }
 
             label {
